objects/maps__AdvRouteWaypoint__c.object
<CustomObject>
    <description>These are the different Advanced Route waypoints/stops for a route</description>
    <fields>
        <fullName>maps__Address__c</fullName>
        <description>This is the address formatted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteDataSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advanced Route Data Set</label>
        <referenceTo>maps__AdvRouteDataSet__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Waypoints</relationshipLabel>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AdvRoute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This the route that the Advanced Route waypoint is associated to</description>
        <label>Maps Advanced Route</label>
        <referenceTo>maps__AdvRoute__c</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssociatedOutputTypes__c</fullName>
        <label>Associated Output Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__BaseObjectAddressMisconfigured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for when all the address fields on the base object we are looking for are not configured properly.</description>
        <label>Base Object Address Misconfigured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectApi__c</fullName>
        <description>This is the object api of the record routed</description>
        <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__BaseObject__r.Name,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__TemplateObject__c,
maps__RelatedAdvRouteTemplate__r.maps__TemplateObject__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Object Api</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <description>This is the id of the core base object record the route is based off of</description>
        <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__BaseObject__c,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__CoreBaseObjectId__c,
maps__RelatedAdvRouteTemplate__r.maps__CoreBaseObjectId__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Object Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__City__c</fullName>
        <description>This is the city of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CreatedForFutureVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to block off a time for a future scheduled visit that is created outside of Maps Advanced Route</description>
        <label>Created for Future Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndDateTime__c</fullName>
        <description>This is the end time of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__IsEndLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsModified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lets us know if the waypoint was edited from core</description>
        <label>Modified from Core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsStartLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LatLong__c</fullName>
        <description>This is the lat/long of the stop</description>
        <label>Lat/Long</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <description>This is a json object of options being passed around in Core</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__PostalCode__c</fullName>
        <description>This is the postal code of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RW_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RW_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RW_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RelatedAdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Waypoints</relationshipLabel>
        <relationshipName>AdvRouteWaypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RouteJobId__c</fullName>
        <description>This is the job id that produced the waypoint</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutedObjectId__c</fullName>
        <description>This is the id of the routed object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routed Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SavedQueryId__c</fullName>
        <description>This will be the id of the related Saved Query record for Maps</description>
        <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__SavedQueryId__c,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__SavedQueryId__c,
maps__RelatedAdvRouteTemplate__r.maps__SavedQueryId__c)))</formula>
        <label>Saved Query Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Sequence__c</fullName>
        <description>This is the sequence order of the stop in the route</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__StartDateTime__c</fullName>
        <description>This is the start time of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__StateProvince__c</fullName>
        <description>This is the state or province of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Street__c</fullName>
        <description>This is the street of the stop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateUserId__c</fullName>
        <formula>maps__AdvRoute__r.maps__AdvRouteTemplateUser__c</formula>
        <label>Template User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__VisitNumberInFrequency__c</fullName>
        <description>This is the visit number in the frequency</description>
        <label>Visit Number in Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <label>Maps Advanced Route Waypoint</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Advanced Route Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Waypoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>